[gd_scene load_steps=26 format=2]

[ext_resource path="res://client/ui/pause_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/fonts/Score.tres" type="DynamicFont" id=2]
[ext_resource path="res://client/fonts/DelaGothicOne-48.tres" type="DynamicFont" id=3]
[ext_resource path="res://client/audio/countdown_3.ogg" type="AudioStream" id=4]
[ext_resource path="res://client/ui/ui.gd" type="Script" id=5]
[ext_resource path="res://client/theme/flappy.theme" type="Theme" id=6]
[ext_resource path="res://client/fonts/DelaGothicOne-80.tres" type="DynamicFont" id=7]
[ext_resource path="res://client/ui/leaderboard_entry.tscn" type="PackedScene" id=8]
[ext_resource path="res://client/fonts/DelaGothicOne-32.tres" type="DynamicFont" id=9]
[ext_resource path="res://client/ui/leaderboard.gd" type="Script" id=10]
[ext_resource path="res://client/audio/countdown_2.ogg" type="AudioStream" id=11]
[ext_resource path="res://client/audio/countdown_1.ogg" type="AudioStream" id=12]
[ext_resource path="res://client/audio/countdown_go.ogg" type="AudioStream" id=13]
[ext_resource path="res://client/ui/heart.png" type="Texture" id=14]
[ext_resource path="res://client/ui/lives.gd" type="Script" id=15]
[ext_resource path="res://client/ui/stopwatch.gd" type="Script" id=16]
[ext_resource path="res://client/world/coin/coin_animation.tres" type="SpriteFrames" id=17]
[ext_resource path="res://client/ui/death-skull.png" type="Texture" id=18]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Skull:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skull:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Skull:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 0.5, 2 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skull:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.6, 3.5 ),
"transitions": PoolRealArray( 0.5, -2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.631373 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8, 2.8, 4 ),
"transitions": PoolRealArray( 1, 2, 2, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Finished"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("FinishedLabel:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2.5, 2.7 ),
"transitions": PoolRealArray( -2, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlaceLabel:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlaceLabel:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.5, 0.5, 0.941 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlaceLabel:anchor_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.6, 0.6, 0.849 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlaceLabel:anchor_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.5, 0.5, 0.941 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlaceLabel:anchor_bottom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.6, 0.6, 0.849 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("FinishTime:modulate")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.1, 1.4, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("FinishTime:anchor_left")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.5, 0.5, 0.91 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("FinishTime:anchor_top")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.682, 0.682, 0.926 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("FinishTime:anchor_right")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.5, 0.5, 0.91 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("FinishTime:anchor_bottom")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.6, 2.7 ),
"transitions": PoolRealArray( 1, 0.5, 2 ),
"update": 0,
"values": [ 0.682, 0.682, 0.926 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FinishTime:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FinishTime:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FinishTime:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FinishTime:anchor_right")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FinishTime:anchor_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlaceLabel:anchor_top")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.866 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlaceLabel:anchor_right")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.941 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("PlaceLabel:anchor_bottom")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.866 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlaceLabel:anchor_left")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.941 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("FinishTime:align")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Theme" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Countdown"
length = 7.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("NumberLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.8, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "3", "2", "1", "GO!" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NumberLabel:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 1, 1.3, 1.5, 1.7, 2, 2.3, 2.5, 2.7, 3, 3.3, 3.5, 4.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NumberLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1, 1.3, 1.7, 2, 2.3, 2.7, 3, 3.3, 4.3 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_countdown_finished"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("Sounds")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0, 0.95, 1.89, 2.95 )
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("NumberLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NumberLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NumberLabel:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("NumberLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 835, 415 ) ]
}

[node name="UI" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 5 )
HighScorePath = NodePath("Ingame/Player/HighScore")
ScorePath = NodePath("Ingame/Player/Score")
LivesPath = NodePath("Ingame/Player/Lives")
CoinsPath = NodePath("Ingame/Player/Coins/HBoxContainer/Coins")

[node name="Death" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Death"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -117.0
margin_right = 130.0
margin_bottom = -47.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "You died!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skull" type="TextureRect" parent="Death"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 256, 256 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Death"]
anims/RESET = SubResource( 7 )
anims/show = SubResource( 6 )

[node name="Finished" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedLabel" type="Label" parent="Finished"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -55.5
margin_right = 218.0
margin_bottom = 55.5
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "Finished!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceLabel" type="Label" parent="Finished"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.941
anchor_top = 0.866
anchor_right = 0.941
anchor_bottom = 0.866
margin_left = -85.0
margin_top = -55.5
margin_right = 85.0
margin_bottom = 55.5
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
text = "0th"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishTime" type="Label" parent="Finished"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -32.56
margin_right = 145.0
margin_bottom = 37.44
grow_horizontal = 0
rect_min_size = Vector2( 290, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "00:00.00"
align = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Finished"]
anims/Finished = SubResource( 1 )
anims/RESET = SubResource( 5 )

[node name="Ingame" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="Control" parent="Ingame"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Score" type="Label" parent="Ingame/Player"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 0 )
theme = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Ingame/Player"]
margin_left = 20.0
margin_top = 10.0
margin_right = 220.0
margin_bottom = 58.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color = Color( 0, 0, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="MarginContainer" parent="Ingame/Player"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -164.0
margin_right = 833.0
grow_vertical = 0
theme = ExtResource( 6 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeBar" type="HBoxContainer" parent="Ingame/Player/Lives"]
margin_left = 50.0
margin_top = 50.0
margin_right = 783.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart2" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart3" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart4" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 204.0
margin_right = 268.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart5" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 272.0
margin_right = 336.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart6" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 340.0
margin_right = 404.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart7" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart8" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 476.0
margin_right = 540.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart9" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 544.0
margin_right = 608.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="Heart10" type="TextureRect" parent="Ingame/Player/Lives/LifeBar"]
modulate = Color( 0.839216, 0.141176, 0.0666667, 1 )
margin_left = 612.0
margin_right = 676.0
margin_bottom = 64.0
texture = ExtResource( 14 )

[node name="ExtraLives" type="Label" parent="Ingame/Player/Lives/LifeBar"]
margin_left = 680.0
margin_top = 8.0
margin_right = 733.0
margin_bottom = 56.0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 9 )
text = "+ 0"

[node name="Coins" type="MarginContainer" parent="Ingame/Player"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -148.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Ingame/Player/Coins"]
margin_left = 50.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 134.0
custom_constants/separation = 20

[node name="Coins" type="Label" parent="Ingame/Player/Coins/HBoxContainer"]
margin_left = 74.0
margin_top = 18.0
margin_right = 96.0
margin_bottom = 66.0
size_flags_horizontal = 10
size_flags_vertical = 6
theme = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Ingame/Player/Coins/HBoxContainer"]
margin_left = 116.0
margin_right = 200.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ingame/Player/Coins/HBoxContainer/Control"]
frames = ExtResource( 17 )
animation = "spin"
frame = 1
playing = true
offset = Vector2( 42, 42 )

[node name="Stopwatch" type="Label" parent="Ingame"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -218.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 58.0
grow_horizontal = 0
rect_min_size = Vector2( 198, 0 )
size_flags_horizontal = 9
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "00:00.00"
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLabel" type="Label" parent="Countdown"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
rect_pivot_offset = Vector2( 125, 125 )
size_flags_horizontal = 5
custom_fonts/font = ExtResource( 7 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Countdown"]
anims/Countdown = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Sounds" type="AudioStreamPlayer" parent="Countdown"]
stream = ExtResource( 13 )
volume_db = -7.634
bus = "Sounds"

[node name="Leaderboard" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 85.0
margin_right = -100.0
margin_bottom = -85.0
size_flags_vertical = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
LeaderboardEntry = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -449.0
margin_right = 449.0
grow_horizontal = 2
rect_min_size = Vector2( 420, 800 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="Leaderboard/VBoxContainer"]
margin_right = 898.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 85 )
size_flags_vertical = 1
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "Leaderboard"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Leaderboard/VBoxContainer"]
margin_left = 224.0
margin_top = 89.0
margin_right = 674.0
margin_bottom = 910.0
rect_min_size = Vector2( 450, 800 )
size_flags_horizontal = 6
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="EntryList" type="VBoxContainer" parent="Leaderboard/VBoxContainer/ScrollContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 5

[node name="Footer" type="HBoxContainer" parent="Leaderboard"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -51.0
margin_right = 300.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="Leaderboard/Footer"]
visible = false
margin_left = 40.0
margin_right = 290.0
margin_bottom = 64.0
rect_min_size = Vector2( 250, 64 )
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 9 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRaceButton" type="Button" parent="Leaderboard/Footer"]
visible = false
margin_left = 175.0
margin_right = 425.0
margin_bottom = 64.0
rect_min_size = Vector2( 250, 64 )
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 9 )
text = "New Race"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="Leaderboard/Footer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Leaderboard/Footer/NewRaceButton" to="." method="_on_NewRaceButton_pressed"]
